# forensics

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
s/: build  setup  watch
spec/: forensics_spec.cpp
src/: backtrace.h  backtrace_osx.cpp  backtrace_windows.cpp  forensics.cpp  forensics.h  signals.h  signals_osx.c  signals_windows.c
